<resources>
    <!--    Generelle ressurser-->
    <string name="app_name">BestillR</string>
    <string name="ikon_beskrivelse">Ikonet for appen</string>
    <string name="banner_beskrivelse">Et banner med samme forgekombinasjon som bannerne på ikonet</string>

    <!--    Delte ressurser-->
    <string name="fortsett">Fortsett</string>
    <string name="avslutt">Avslutt</string>
    <string name="lagre">Lagre</string>
    <string name="endre">Endre</string>
    <string name="slett">Slett</string>
    <string name="navn">Navn</string>
    <string name="telefon">Telefon</string>
    <string name="tom">Listen er tom</string>

    <!--    Forside ressurser-->
    <string name="forside">Forside</string>

    <!--    Venn ressurser-->
    <string name="venner">Venner</string>
    <string name="ny_venn">Ny Venn</string>
    <string name="lagre_venn">Lagre Venn</string>
    <string name="endre_venner">Endre Venn</string>
    <string name="slett_venner">Slett Venn</string>

    <!--    Restaurant ressurser-->
    <string name="restaurant">Restaurant</string>
    <string name="restauranter">Restauranter</string>
    <string name="adresse">Adresse</string>
    <string name="type">Type restaurant</string>
    <string name="alle_restauranter">Alle Restauranter</string>
    <string name="ny_restaurant">Ny Restaurant</string>
    <string name="lagre_restaurant">Lagre Restaurant</string>
    <string name="endre_restaurant">Endre Restaurant</string>
    <string name="slett_restaurant">Slett Restaurant</string>
    <string name="restaurant_order">Restaurant Bestilling</string>

    <!--    Bestilling ressurser-->
    <string name="dato">Dato</string>
    <string name="tidspunkt">Tidspunkt</string>
    <string name="bestillinger">Bestillinger</string>
    <string name="alle_bestillinger">Alle Bestillinger</string>
    <string name="aktive_bestillinger">Aktive Bestillinger</string>
    <string name="inaktive_bestillinger">Inaktive Bestillinger</string>
    <string name="til_inaktive_bestillinger">Til Inaktive Bestillinger</string>
    <string name="ny_bestilling">Ny Bestilling</string>
    <string name="lagre_bestilling">Lagre Bestilling</string>
    <string name="endre_bestilling">Endre Bestilling</string>
    <string name="slett_bestilling">Slett Bestilling</string>
    <string name="bestill">Bestill</string>

    <!--    Instillinger ressurser-->
    <string name="endre_settings">Endre innstillinger</string>
    <string name="notisTittel">Push notifikasjoner</string>
    <string name="settings">Innstillinger</string>
    <string name="notisTekst">Skru SMS / push notifikasjoner av eller på</string>
    <string name="sms">SMS varsling</string>
    <string name="velgTidspunkt">Påminnelse om bestilling sendes klokken</string>
    <string name="velgSms">Velg standard SMS som skal sendes</string>
    <string name="tidOgMelding">Velg tidspunkt og standardmelding</string>
    <string name="smsMelding">Du har en bestilling i dag!</string>
    <string name="dropdown_beskrivelse">En dropdownliste med restaurant som verdi</string>
</resources>