<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <ListPreference
            app:defaultValue="false"
            app:entries="@array/av_paa_array"
            app:entryValues="@array/av_paa_array_values"
            app:key="notifikasjon"
            app:negativeButtonText="@string/avslutt"
            app:title="@string/notisTittel"
            app:summary="@string/notisTekst" />
        <ListPreference
            app:defaultValue="false"
            app:entries="@array/av_paa_array"
            app:entryValues="@array/av_paa_array_values"
            app:key="sms"
            app:negativeButtonText="@string/avslutt"
            app:title="@string/sms"
            app:summary="@string/smsTekst" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>