<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".restauranter.EndreRestaurantActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sm"
        android:background="@color/purple_200"
        app:title="@string/endre_restaurant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navn" />

    <EditText
        android:id="@+id/innEndreRestaurantNavn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_height_sm"
        android:hint="@string/navn"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adresse" />

    <EditText
        android:id="@+id/innEndreRestaurantAdresse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_height_sm"
        android:autofillHints="postalAddress"
        android:hint="@string/adresse"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefon" />

    <EditText
        android:id="@+id/innEndreRestaurantTelefon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_height_sm"
        android:autofillHints="phone"
        android:hint="@string/telefon"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type" />

    <EditText
        android:id="@+id/innEndreRestaurantType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_height_sm"
        android:hint="@string/type"
        android:inputType="text" />

    <Button
        android:id="@+id/lagreRestaurant"
        android:layout_width="@dimen/txt_width_lg"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_md"
        android:text="@string/endre"
        app:backgroundTint="@color/purple_200"
        android:onClick="endreRestaurant" />


</LinearLayout>