<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/purple_200"
        app:title="@string/venner" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:id="@+id/venneListView" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/endre_venner"
        android:background="@color/purple_200"
        android:onClick="endreVenn" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/slett_venner"
        android:background="@color/purple_200"
        android:onClick="slettVenn" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/ny_venn"
        android:background="@color/purple_200"
        android:onClick="lagreVenn" />

</LinearLayout>