<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ForsideActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/purple_200"
        app:title="@string/restaurant_order" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/restauranter"
        android:background="@color/purple_200"
        android:onClick="visRestauranter" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/venner"
        android:background="@color/purple_200"
        android:onClick="visVenner" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/bestillinger"
        android:background="@color/purple_200"
        android:onClick="visBestillinger" />


</LinearLayout>