<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bestillinger.EndreBestillingActivity"
    android:orientation="vertical"
    android:background="@color/beige">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_logo"
        android:paddingEnd="@dimen/padding_toolbar"
        android:paddingStart="@dimen/padding_toolbar"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp">

        <ImageButton
            android:layout_width="@dimen/txt_height_sm"
            android:layout_height="@dimen/txt_height_sm"
            android:scaleType="fitCenter"
            android:layout_gravity="start"
            android:background="@null"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/ikon_beskrivelse"
            tools:ignore="ImageContrastCheck"
            android:onClick="tilForside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktive_bestillinger"
            android:textSize="@dimen/txt_size_xl"
            android:textColor="@color/white" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_gravity="end"
            android:background="@null"
            android:src="@drawable/settingsicon"
            android:contentDescription="@string/settings"
            android:onClick="tilSettings" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/banner"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/banner_beskrivelse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_sm"
        android:paddingEnd="@dimen/margin_sm" >

        <TextView
            android:paddingTop="@dimen/margin_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:id="@+id/innEndreBestillingRestaurant_dropdown"
            android:spinnerMode="dropdown"
            android:contentDescription="@string/dropdown_beskrivelse"/>

        <TextView
            android:layout_marginTop="@dimen/margin_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venner" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height_md"
            android:id="@+id/innEndreBestillingVenneListe"
            android:fadeScrollbars="false" />

        <TextView
            android:layout_marginTop="@dimen/margin_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dato" />

        <EditText
            android:id="@+id/innEndreBestillingDato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/endredato"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dato"
            android:importantForAutofill="no"
            android:inputType="none"
            android:minHeight="@dimen/txt_height_sm"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_marginTop="@dimen/margin_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidspunkt" />

        <EditText
            android:id="@+id/innEndreBestillingTidspunkt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/tidspunkt"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/tidspunkt"
            android:importantForAutofill="no"
            android:inputType="none"
            android:minHeight="@dimen/txt_height_sm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lagre_bestilling"
            android:layout_width="@dimen/txt_width_lg"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_sm"
            android:text="@string/endre"
            android:textColor="@color/black"
            android:background="@color/blue_logo"
            android:drawableTop="@drawable/endre_generell"
            android:paddingBottom="@dimen/margin_sm"
            android:paddingTop="@dimen/margin_sm"
            android:onClick="endreBestilling" />

    </LinearLayout>



</LinearLayout>