<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".restauranter.LagreRestaurantActivity"
    android:background="@color/beige">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_logo"
        android:paddingEnd="@dimen/padding_toolbar"
        android:paddingStart="@dimen/padding_toolbar"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp">

        <ImageButton
            android:layout_width="@dimen/txt_height_sm"
            android:layout_height="@dimen/txt_height_sm"
            android:scaleType="fitCenter"
            android:layout_gravity="start"
            android:background="@null"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/ikon_beskrivelse"
            tools:ignore="ImageContrastCheck"
            android:onClick="tilForside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktive_bestillinger"
            android:textSize="@dimen/txt_size_xl"
            android:textColor="@color/white" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_gravity="end"
            android:background="@null"
            android:src="@drawable/settingsicon"
            android:contentDescription="@string/settings"
            android:onClick="tilSettings" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/banner"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/banner_beskrivelse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_xs"
        android:paddingEnd="@dimen/margin_xs" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navn"
            android:paddingTop="@dimen/margin_sm"/>

        <EditText
            android:id="@+id/innNavn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height_sm"
            android:hint="@string/navn"
            android:inputType="text"
            android:autofillHints="name"
            android:drawableEnd="@drawable/restauranticon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresse"
            android:paddingTop="@dimen/margin_sm"/>

        <EditText
            android:id="@+id/innAdresse"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height_sm"
            android:autofillHints="postalAddress"
            android:hint="@string/adresse"
            android:inputType="text"
            android:drawableEnd="@drawable/lokasjon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefon"
            android:paddingTop="@dimen/margin_sm"/>

        <EditText
            android:id="@+id/innTelefon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height_sm"
            android:autofillHints="phone"
            android:hint="@string/telefon"
            android:inputType="text"
            android:drawableEnd="@drawable/telefon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:paddingTop="@dimen/margin_sm"/>

        <EditText
            android:id="@+id/innType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height_sm"
            android:hint="@string/type"
            android:inputType="text"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/type"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lagreRestaurant"
            android:layout_width="@dimen/txt_width_lg"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_sm"
            android:text="@string/lagre"
            android:textColor="@color/black"
            android:background="@color/blue_logo"
            android:onClick="lagreRestaurant"
            android:drawableStart="@drawable/lagrerestaurant"
            android:paddingStart="@dimen/margin_md"
            android:paddingEnd="@dimen/margin_lg"/>

    </LinearLayout>

</LinearLayout>