<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/purple_200"
        app:title="@string/restaurant_order" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alle_bestillinger" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bestillinger"
        android:orientation="vertical" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/lagre_bestilling"
        android:background="@color/purple_200"
        android:onClick="lagreBestilling" />

</LinearLayout>